Fixed scrolling issues caused by z-index

--- a/public/assets/vis/css/visualization.css
+++ b/public/assets/vis/css/visualization.css
@@ -13,6 +13,13 @@
     padding: 0 0 0 0;   
 }
 
+/* Kill the drop shadow */
+#custom_navbar {
+    -webkit-box-shadow: 0px 0px 0px #FFF;
+    -moz-box-shadow:    0px 0px 0px #FFF;
+    box-shadow:         0px 0px 0px #FFF;
+}
+
 #vis-wrapper {
     position: absolute;
     left: 0px;
@@ -120,7 +127,7 @@
     background: #ffffff;
     margin: 0 0 0 0;
     padding: 0 0 0 0;
-    z-index: 999;
+    /*z-index: 999;*/
     min-width: 1280px;
     min-height: 700px;
 }
